# wado_prizewall_generator

./: Cargo.toml  README.md  card_list.csv  card_list_long.csv  prizewall.csv  prizewall_old.csv
src/: main.rs
