[package]
name = "wado_prizewall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
imageproc = "0.23.0"
scryfall = "0.10.2"
csv = "1.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
rusttype = "0.9.2"

